data/usersCode/everf/question1/error.txt
/home/gauravghati/clash2/data/usersCode/everf/question1/code1-1.cpp:1:1: error: ‘fasfasfaf’ does not name a type
 fasfasfaf asd asd
 ^~~~~~~~~
